[gd_scene load_steps=29 format=3 uid="uid://bysj07ybjl18t"]

[ext_resource type="Script" path="res://enemy.gd" id="1_gqgb0"]
[ext_resource type="Texture2D" uid="uid://b8lxga771cjge" path="res://art/b/frame_00011.png" id="2_i0la4"]
[ext_resource type="Texture2D" uid="uid://doln8c2niohhv" path="res://art/b/frame_00012.png" id="3_sxv2e"]
[ext_resource type="Texture2D" uid="uid://borcnmjx42qx6" path="res://art/b/frame_00013.png" id="4_luqis"]
[ext_resource type="Texture2D" uid="uid://dc037jm1blolx" path="res://art/b/frame_00014.png" id="5_q6ca4"]
[ext_resource type="Texture2D" uid="uid://dak7aocnnh02h" path="res://art/b/frame_00015(1).png" id="6_0iavf"]
[ext_resource type="Texture2D" uid="uid://b02od08saomw7" path="res://art/b/frame_00015.png" id="7_fbijt"]
[ext_resource type="Texture2D" uid="uid://d1b3yo4latnl6" path="res://art/b/frame_00016.png" id="8_dx88v"]
[ext_resource type="Texture2D" uid="uid://h22pf8qd03ny" path="res://art/b/frame_00017.png" id="9_68waq"]
[ext_resource type="Texture2D" uid="uid://bat766lnrsj6k" path="res://art/b/frame_00018.png" id="10_t8m8a"]
[ext_resource type="Texture2D" uid="uid://68ayee6uhosw" path="res://art/b/frame_00019.png" id="11_hftl7"]
[ext_resource type="Texture2D" uid="uid://5lrj5exi520q" path="res://art/b/frame_00020.png" id="12_mq8vt"]
[ext_resource type="Texture2D" uid="uid://bbgrqjijjn78n" path="res://art/b/frame_00021.png" id="13_nu4m6"]
[ext_resource type="Texture2D" uid="uid://d3gy8mllgrrhi" path="res://art/b/frame_00022.png" id="14_a61uh"]
[ext_resource type="Texture2D" uid="uid://p074p1tt7gmt" path="res://art/b/frame_00001.png" id="15_vftb6"]
[ext_resource type="Texture2D" uid="uid://cdgd6p1gewy1w" path="res://art/b/frame_00002.png" id="16_wtixh"]
[ext_resource type="Texture2D" uid="uid://hhk5wj8ts4fg" path="res://art/b/frame_00003.png" id="17_30r8c"]
[ext_resource type="Texture2D" uid="uid://salpyk2unqnr" path="res://art/b/frame_00004.png" id="18_5q765"]
[ext_resource type="Texture2D" uid="uid://dx63ads1wjftn" path="res://art/b/frame_00005.png" id="19_8w0vl"]
[ext_resource type="Texture2D" uid="uid://dq7pf4s4d7772" path="res://art/b/frame_00006.png" id="20_70kgw"]
[ext_resource type="Texture2D" uid="uid://cxp24top6cqot" path="res://art/b/frame_00007.png" id="21_8kexq"]
[ext_resource type="Texture2D" uid="uid://xw35iocq3amk" path="res://art/b/frame_00008.png" id="22_vow1o"]
[ext_resource type="Texture2D" uid="uid://blgu8bwkyiqyr" path="res://art/b/frame_00009.png" id="23_gkeba"]
[ext_resource type="Texture2D" uid="uid://clw84kofnhthv" path="res://art/b/frame_00010.png" id="24_16w6k"]

[sub_resource type="SpriteFrames" id="SpriteFrames_drcc8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_i0la4")
}, {
"duration": 11.0,
"texture": ExtResource("3_sxv2e")
}],
"loop": true,
"name": &"attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_luqis")
}, {
"duration": 1.0,
"texture": ExtResource("5_q6ca4")
}, {
"duration": 1.0,
"texture": ExtResource("6_0iavf")
}, {
"duration": 1.0,
"texture": ExtResource("7_fbijt")
}, {
"duration": 1.0,
"texture": ExtResource("8_dx88v")
}, {
"duration": 1.0,
"texture": ExtResource("9_68waq")
}, {
"duration": 1.0,
"texture": ExtResource("10_t8m8a")
}, {
"duration": 1.0,
"texture": ExtResource("11_hftl7")
}, {
"duration": 1.0,
"texture": ExtResource("12_mq8vt")
}, {
"duration": 1.0,
"texture": ExtResource("13_nu4m6")
}, {
"duration": 1.0,
"texture": ExtResource("14_a61uh")
}],
"loop": true,
"name": &"death",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_vftb6")
}, {
"duration": 1.0,
"texture": ExtResource("16_wtixh")
}, {
"duration": 1.0,
"texture": ExtResource("17_30r8c")
}, {
"duration": 1.0,
"texture": ExtResource("18_5q765")
}, {
"duration": 1.0,
"texture": ExtResource("19_8w0vl")
}, {
"duration": 1.0,
"texture": ExtResource("20_70kgw")
}, {
"duration": 1.0,
"texture": ExtResource("21_8kexq")
}, {
"duration": 1.0,
"texture": ExtResource("22_vow1o")
}, {
"duration": 1.0,
"texture": ExtResource("23_gkeba")
}, {
"duration": 1.0,
"texture": ExtResource("24_16w6k")
}],
"loop": true,
"name": &"walk",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tfmp3"]
size = Vector2(80, 144)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w1ih6"]
size = Vector2(112, 51.625)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_75yrf"]
size = Vector2(120, 80)

[node name="Enemy" type="CharacterBody2D"]
collision_mask = 9
script = ExtResource("1_gqgb0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.222222, 0.222222)
sprite_frames = SubResource("SpriteFrames_drcc8")
animation = &"attack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_tfmp3")

[node name="hit" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit"]
position = Vector2(0, -40)
shape = SubResource("RectangleShape2D_w1ih6")
debug_color = Color(0.6, 0.388235, 1, 0.419608)

[node name="attack" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack"]
position = Vector2(0, 40)
shape = SubResource("RectangleShape2D_75yrf")
debug_color = Color(0.929412, 0, 0.654902, 0.419608)

[node name="mob_Timer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[connection signal="area_entered" from="hit" to="." method="_on_hit_area_entered"]
[connection signal="body_entered" from="attack" to="." method="_on_attack_body_entered"]
